--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,108 +1,141 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:android1="http://schemas.android.com/apk/res/android"
+    android1:id="@+id/ScrollView1"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@drawable/Beige"
-    android:orientation="vertical" xmlns:android1="http://schemas.android.com/apk/res/android">
-    
-    <TextView
-        android:id="@+id/LoginText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/LoginLabel"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@drawable/Brown"
-        android:textSize="32sp" />
+    android:layout_height="fill_parent" >
 
-    <LinearLayout
-        android:id="@+id/InputLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" >
-
-        <TextView
-            android:id="@+id/EmailLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/emailLabel"
-            android:textColor="@drawable/Black"
-            android:textSize="20sp" />
-
-        <EditText
-            android:id="@+id/EmailInput"
-            android:hint="@string/EmailInput_hint"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textEmailAddress" android1:text="g10049013@thu.edu.tw">
-
-        </EditText>
-
-        <TextView
-            android:id="@+id/PassLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/passLabel"
-            android:textColor="@drawable/Black"
-            android:textSize="20sp" />
-
-        <EditText
-            android:id="@+id/PassInput"
-            android:hint="@string/PassInput_hint"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPassword" android1:text="vansttt">
-        </EditText>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/BtnLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" >
-
-        <Button
-            android:id="@+id/SignInBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/SignIn" android:onClick="btn1Click" android1:clickable="true"/>
-
-        <TextView
-            android:id="@+id/Or"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/or"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="@drawable/Black" />
-
-        <Button
-            android:id="@+id/SignUpBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/SignUp" android1:onClick="btn2Click"/>
-    </LinearLayout>
-
-
-
-    <LinearLayout
-        android1:id="@+id/FooterLayout"
+    <RelativeLayout
         android1:layout_width="match_parent"
-        android1:layout_height="wrap_content" android1:gravity="right">
+        android1:layout_height="wrap_content" >
 
-        <TextView
-            android1:id="@+id/goWeb"
-            android1:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/Header"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@layout/header_gradient"
+            android:paddingBottom="5dip"
+            android:paddingTop="5dip"
+            android1:orientation="horizontal" >
+
+            <!-- Logo Start -->
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dip"
+                android:src="@drawable/tour_icon" />
+
+            <!-- Logo Ends -->
+
+            <TextView
+                android1:id="@+id/TitleText"
+                android1:layout_width="200dp"
+                android1:layout_height="fill_parent"
+                android1:layout_marginLeft="10dp"
+                android1:layout_marginTop="5dp"
+                android1:gravity="center_horizontal"
+                android1:text="@string/TitleText"
+                android1:textColor="@drawable/Beige"
+                android1:textSize="25sp"
+                android1:textStyle="italic|bold" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/footer"
+            android:layout_width="fill_parent"
+            android:layout_height="80dp"
+            android:layout_alignParentBottom="true"
+            android:layout_below="@+id/LoginForm"
+            android:background="@layout/footer_repeat" >
+
+		</LinearLayout>
+
+            
+        
+        <LinearLayout
+            android1:id="@+id/LoginForm"
+            android1:layout_width="match_parent"
             android1:layout_height="wrap_content"
-            android1:text="@string/goWeb"
-            android1:textAppearance="?android:attr/textAppearanceMedium"
-            android1:textColor="@drawable/SteelBlue" android1:onClick="textClick" android1:clickable="true"/>
+            android1:orientation="vertical"
+            android:padding="10dip"
+          	android:layout_below="@+id/Header" >
 
-    </LinearLayout>
+            <TextView
+                android1:id="@+id/EmailLabel"
+                android1:layout_width="fill_parent"
+                android1:layout_height="wrap_content"
+                android1:text="@string/emailLabel"
+                android1:textColor="@drawable/LightBrown"
+                android1:textSize="20sp"
+                android1:textStyle="bold" />
 
-</LinearLayout>
+            <EditText
+                android1:id="@+id/EmailInput"
+                android1:layout_width="match_parent"
+                android1:layout_height="wrap_content"
+                android1:ems="10"
+                android:layout_marginTop="5dip"
+                android1:hint="@string/EmailInput_hint"
+                android1:inputType="textEmailAddress"
+                android:singleLine="true"
+                android1:text="g10049013@thu.edu.tw" />
+
+            <TextView
+                android1:id="@+id/PassLabel"
+                android1:layout_width="fill_parent"
+                android1:layout_height="wrap_content"
+                android1:text="@string/passLabel"
+                android1:textColor="@drawable/LightBrown"
+                android1:textSize="20sp"
+                android1:textStyle="bold" />
+
+            <EditText
+                android1:id="@+id/PassInput"
+                android1:layout_width="match_parent"
+                android1:layout_height="wrap_content"
+                android1:ems="10"
+                android:layout_marginTop="5dip"
+                android1:hint="@string/PassInput_hint"
+                android1:inputType="textPassword"
+                android:singleLine="true"
+                android1:text="vansttt" />
+
+            <Button
+                android1:id="@+id/SignInBtn"
+                android1:layout_width="fill_parent"
+                android1:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android1:onClick="btn1Click"
+                android1:text="@string/SignIn" />
+            
+            <TextView
+                android:id="@+id/Register"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android1:layout_marginTop="20dp"
+                android:gravity="center"
+                android:text="@string/NewGuy"
+                android:textColor="#0b84aa"
+                android:textSize="20sp"
+                android1:textStyle="italic" />
+
+            <TextView
+                android1:id="@+id/goWeb"
+                android1:layout_width="wrap_content"
+                android1:layout_height="wrap_content"
+                android1:layout_gravity="right"
+                android1:clickable="true"
+                android1:onClick="textClick"
+                android1:text="@string/goWeb"
+                android1:textAppearance="?android:attr/textAppearanceMedium"
+                android1:textColor="@drawable/DarkOrange"
+                android1:textStyle="bold" />
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
+</ScrollView>
