--- a/res/layout-normal/map.xml
+++ b/res/layout-normal/map.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/mapLayout"
+<LinearLayout android:id="@+id/mapLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/Ivory"
     android:orientation="vertical"
     android:scrollbarAlwaysDrawVerticalTrack="true"
-    android:scrollbars="horizontal|vertical" >
+    android:scrollbars="horizontal|vertical" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
         android:id="@+id/SayHi"
@@ -68,7 +67,7 @@
     <ScrollView
         android:id="@+id/ScrollArea"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
+        android:layout_height="wrap_content" >
 
         <RelativeLayout
             android:layout_width="fill_parent"
@@ -86,14 +85,43 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
-                <TextView
-                    android:id="@+id/displayText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="TextView" />
+                <LinearLayout
+                    android:id="@+id/searchLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" >
+
+                    <AutoCompleteTextView
+                        android:id="@+id/typingText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:completionThreshold="1"
+                        android:ems="10"
+                        android:focusable="false"
+                        android:focusableInTouchMode="false"
+                        android:hint="@string/SearchSomething"
+                        android:imeOptions="actionGo|actionSearch"
+                        android:singleLine="true"
+                        android:textColor="@drawable/Brown" >
+
+                        <requestFocus />
+                    </AutoCompleteTextView>
+
+                    <Button
+                        android:id="@+id/searchBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@drawable/button_style01"
+                        android:minHeight="24dp"
+                        android:minWidth="32dp"
+                        android:onClick="searchClick"
+                        android:text="@string/searchBotton"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
 
             </LinearLayout>
-
 
             <TableLayout
                 android:id="@+id/AddInfo"
@@ -106,5 +134,18 @@
         </RelativeLayout>
 
     </ScrollView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+
+        <ListView
+            android:id="@+id/PlanList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+        </ListView>
+
+    </LinearLayout>
 
 </LinearLayout>
