--- a/res/layout-normal/ex_layout1.xml
+++ b/res/layout-normal/ex_layout1.xml
@@ -7,8 +7,9 @@
         android:id="@+id/groupName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dip"
+        android:layout_marginLeft="20dip"
         android:layout_marginTop="5dip"
+        android:layout_marginBottom="5dip"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@drawable/SeeGreen"
         android:textSize="18sp" />
@@ -19,7 +20,7 @@
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_below="@id/groupName"
-        android:layout_marginLeft="10dip"
+        android:layout_marginLeft="15dip"
         android:paddingBottom="5dip"
         android:paddingTop="4dip"
         android:textAppearance="?android:attr/textAppearanceSmall" />
@@ -31,6 +32,18 @@
         android:layout_alignParentRight="true"
         android:focusable="false"
         android:src="@drawable/gomap_icon" />
+
+    <Button
+        android:id="@+id/routeDirection"
+        android:layout_width="35dp"
+        android:layout_height="30dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="3dp"
+        android:layout_toLeftOf="@+id/showMap"
+        android:background="@drawable/route_blue_icon"
+        android:contentDescription="Direct route"
+        android:focusable="false" />
     
     <ImageView
         android:id="@+id/typeImage1"
