--- a/res/layout-normal/map.xml
+++ b/res/layout-normal/map.xml
@@ -7,14 +7,15 @@
     android:background="@drawable/Ivory"
     android:orientation="vertical"
     android:scrollbarAlwaysDrawVerticalTrack="true"
-    android:scrollbars="horizontal|vertical" >
+    android:scrollbars="horizontal|vertical"
+    android:layoutAnimation="@anim/layout_anim_ctrl" >
 
     <RelativeLayout
         android:id="@+id/SayHi"
         android:layout_width="fill_parent"
         android:layout_height="40dp"
         android:layout_gravity="center"
-        android:background="@drawable/title_bg"
+        android:background="@drawable/title_bg1"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingBottom="2dp" >
@@ -34,6 +35,7 @@
             android:id="@+id/loadingPlan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="?android:attr/progressBarStyleSmall"
             android:layout_centerInParent="true"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/UserName"
@@ -49,24 +51,64 @@
             android:layout_marginLeft="2dp"
             android:background="@drawable/map_none"
             android:onClick="mapNoneClick" />
+        
+        <View
+            android:id="@+id/headerLine2"
+            android:layout_width="2dp"
+            android:layout_height="fill_parent"
+            android:layout_marginBottom="-1dp"
+            android:layout_marginTop="1dp"
+            android:layout_toRightOf="@+id/mapNoneBtn"
+            android:background="@drawable/LightBrown" />
 
         <Button
             android:id="@+id/mapHalfBtn"
             android:layout_width="35dp"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:layout_marginLeft="1dp"
             android:layout_toRightOf="@+id/mapNoneBtn"
             android:background="@drawable/map_half"
             android:onClick="mapHalfClick" />
+        
+        <View
+            android:id="@+id/headerLine3"
+            android:layout_width="2dp"
+            android:layout_height="fill_parent"
+            android:layout_marginBottom="-1dp"
+            android:layout_marginTop="1dp"
+            android:layout_toRightOf="@+id/mapHalfBtn"
+            android:background="@drawable/LightBrown" />
 
         <Button
             android:id="@+id/mapFullBtn"
             android:layout_width="35dp"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:layout_marginLeft="1dp"
             android:layout_toRightOf="@+id/mapHalfBtn"
             android:background="@drawable/map_full"
             android:onClick="mapFullClick" />
+        
+        <View
+            android:id="@+id/headerLine4"
+            android:layout_width="1dp"
+            android:layout_height="fill_parent"
+            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="3dp"
+            android:layout_marginTop="5dp"
+            android:layout_toRightOf="@+id/mapFullBtn"
+            android:background="@drawable/Gray" />
+        
+        <View
+            android:id="@+id/headerLine1"
+            android:layout_width="1dp"
+            android:layout_height="fill_parent"
+            android:layout_marginBottom="2dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginTop="5dp"
+            android:layout_toLeftOf="@+id/popWindow"
+            android:background="@drawable/Gray" />
 
         <ImageButton
             android:id="@+id/popWindow"
@@ -76,6 +118,7 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="1dp"
             android:layout_marginTop="2dp"
+            android:contentDescription="Popup the spots window"
             android:onClick="popUpClick"
             android:src="@drawable/new_window_icon" />
 
@@ -84,7 +127,7 @@
     <View
         android:id="@+id/Line1"
         android:layout_width="fill_parent"
-        android:layout_height="2dp"
+        android:layout_height="1dp"
         android:background="#000000" />
 
     <LinearLayout
@@ -111,7 +154,7 @@
     <View
         android:id="@+id/Line2"
         android:layout_width="fill_parent"
-        android:layout_height="2dp"
+        android:layout_height="1dp"
         android:background="#000000" />
 
     <ScrollView
@@ -202,7 +245,7 @@
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="-3dp"
-                        android:layout_marginTop="-3dp"
+                        android:layout_marginTop="-2dp"
                         android:background="@drawable/Transparent1"
                         android:gravity="center"
                         android:scrollbars="horizontal" >
