--- a/res/layout-large/map.xml
+++ b/res/layout-large/map.xml
@@ -7,7 +7,8 @@
     android:background="@drawable/Ivory"
     android:orientation="vertical"
     android:scrollbarAlwaysDrawVerticalTrack="true"
-    android:scrollbars="horizontal|vertical" >
+    android:scrollbars="horizontal|vertical"
+     >
 
     <RelativeLayout
         android:id="@+id/SayHi"
@@ -91,21 +92,21 @@
 
         <View
             android:id="@+id/headerLine4"
-            android:layout_width="1dp"
+            android:layout_width="2dp"
             android:layout_height="fill_parent"
-            android:layout_marginBottom="2dp"
+            android:layout_marginBottom="9dp"
             android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="12dp"
             android:layout_toRightOf="@+id/mapFullBtn"
             android:background="@drawable/Gray" />
 
         <View
             android:id="@+id/headerLine1"
-            android:layout_width="1dp"
+            android:layout_width="2dp"
             android:layout_height="fill_parent"
-            android:layout_marginBottom="2dp"
+            android:layout_marginBottom="9dp"
             android:layout_marginRight="4dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="12dp"
             android:layout_toLeftOf="@+id/popWindow"
             android:background="@drawable/Gray" />
 
