--- a/res/layout-normal/ex_child_layout.xml
+++ b/res/layout-normal/ex_child_layout.xml
@@ -5,15 +5,49 @@
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
     android1:background="@drawable/AliceBlue" >
- 
+
+    <View
+        android1:id="@+id/exLine0"
+        android1:layout_width="fill_parent"
+        android1:layout_height="1dp"
+        android1:layout_alignParentTop="true"
+        android1:background="@drawable/Gray" />
+
+    <LinearLayout
+        android1:id="@+id/dtLayout"
+        android1:layout_width="match_parent"
+        android1:layout_height="wrap_content"
+        android1:layout_below="@+id/exLine0" >
+
+        <TextView
+            android1:id="@+id/durationInfo"
+            android1:layout_width="0dp"
+            android1:layout_height="match_parent"
+            android1:layout_weight="1"
+            android1:background="@drawable/PaleGreen"
+            android1:paddingLeft="4dp"
+            android1:textSize="18sp" />
+
+        <TextView
+            android1:id="@+id/transportationInfo"
+            android1:layout_width="0dp"
+            android1:layout_height="match_parent"
+            android1:layout_weight="2"
+            android1:background="@drawable/SkyBlue"
+            android1:paddingLeft="4dp"
+            android1:textSize="18sp" />
+
+    </LinearLayout>
+
     <TextView
         android:id="@+id/spotInfo"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="5dip"
+        android1:layout_below="@+id/dtLayout"
         android:textSize="16sp" />
-    
+
     <View
         android:id="@+id/exLine1"
         android:layout_width="fill_parent"
@@ -63,5 +97,12 @@
         android1:scaleType="fitCenter"
         android1:src="@drawable/menu_delete"
         android1:visibility="gone" />
- 
+
+    <View
+        android1:id="@+id/exLine2"
+        android1:layout_width="fill_parent"
+        android1:layout_height="1dp"
+        android1:layout_below="@+id/spotImage1"
+        android1:background="@drawable/Gray" />
+
 </RelativeLayout>
